--- a/MTN French Conjugator/French Conjugator.vbproj
+++ b/MTN French Conjugator/French Conjugator.vbproj
@@ -62,6 +62,9 @@
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Coding4Fun.Toolkit.Controls">
+      <HintPath>..\packages\Coding4Fun.Toolkit.Controls.2.0.7\lib\wp71\Coding4Fun.Toolkit.Controls.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Phone.Controls.Toolkit, Version=1.0.0.0, Culture=neutral, PublicKeyToken=b772ad94eb9ca604" />
     <Reference Include="System" />
     <Reference Include="System.Xml" />
@@ -97,6 +100,7 @@
     <Compile Include="App.xaml.vb">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="VerbTenses.vb" />
     <Compile Include="IrregularVerbs.vb" />
     <Compile Include="MainPage.xaml.vb">
       <DependentUpon>MainPage.xaml</DependentUpon>
@@ -134,8 +138,10 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <None Include="FrenchAppBackground.psd" />
     <None Include="My Project\AppManifest.xml" />
     <None Include="My Project\WMAppManifest.xml" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="ApplicationIcon.png">
@@ -144,11 +150,14 @@
     <Content Include="Background.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="FrenchAppBackground.png" />
     <Content Include="Images\appbar.back.rest.png" />
     <Content Include="Images\appbar.feature.settings.rest.png" />
     <Content Include="Images\appbar.overflowdots.png" />
     <Content Include="Images\appbar.questionmark.rest.png" />
     <Content Include="Images\appbar.refresh.rest.png" />
+    <Resource Include="Toolkit.Content\ApplicationBar.Cancel.png" />
+    <Resource Include="Toolkit.Content\ApplicationBar.Check.png" />
     <Resource Include="Images\MTNSoftwareLogo.png" />
     <Resource Include="MTNSoftwareLogo.png" />
     <Content Include="SplashScreenImage.jpg" />
