--- a/MTN French Conjugator inDev/French Conjugator.vbproj
+++ b/MTN French Conjugator inDev/French Conjugator.vbproj
@@ -62,6 +62,9 @@
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Coding4Fun.Toolkit.Controls">
+      <HintPath>..\packages\Coding4Fun.Toolkit.Controls.2.0.7\lib\wp71\Coding4Fun.Toolkit.Controls.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Phone.Controls.Toolkit, Version=1.0.0.0, Culture=neutral, PublicKeyToken=b772ad94eb9ca604" />
     <Reference Include="System" />
     <Reference Include="System.Xml" />
@@ -97,6 +100,9 @@
     <Compile Include="App.xaml.vb">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="PageThanks.xaml.vb">
+      <DependentUpon>PageThanks.xaml</DependentUpon>
+    </Compile>
     <Compile Include="VerbTenses.vb" />
     <Compile Include="IrregularVerbs.vb" />
     <Compile Include="MainPage.xaml.vb">
@@ -125,6 +131,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="PageThanks.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="ReportPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -138,6 +148,7 @@
     <None Include="FrenchAppBackground.psd" />
     <None Include="My Project\AppManifest.xml" />
     <None Include="My Project\WMAppManifest.xml" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="ApplicationIcon.png">
@@ -152,6 +163,8 @@
     <Content Include="Images\appbar.overflowdots.png" />
     <Content Include="Images\appbar.questionmark.rest.png" />
     <Content Include="Images\appbar.refresh.rest.png" />
+    <Resource Include="Toolkit.Content\ApplicationBar.Cancel.png" />
+    <Resource Include="Toolkit.Content\ApplicationBar.Check.png" />
     <Resource Include="Images\MTNSoftwareLogo.png" />
     <Resource Include="MTNSoftwareLogo.png" />
     <Content Include="SplashScreenImage.jpg" />
