modified:   Bin/Debug/French Conjugator.dll 	modified:   Bin/Debug/French Conjugator.pdb 	modified:   Bin/Debug/French Conjugator.xml 	modified:   Bin/Debug/French Conjugator_Debug_AnyCPU.xap 	modified:   Bin/Debug/MDIL/French Conjugator.dll 	modified:   Bin/Debug/MDIL/WMAppManifest.xml 	modified:   Bin/Debug/My Project/WMAppManifest.xml 	modified:   French Conjugator.v12.suo 	modified:   French Conjugator.vbproj 	modified:   Images/Thumbs.db 	renamed:    SplashScreenImage.jpg -> LegacySplashScreenImage.jpg 	deleted:    MTNSplashLogoFC.png 	modified:   My Project/AssemblyInfo.vb 	modified:   My Project/WMAppManifest.xml 	modified:   SplashScreenImage.jpg 	modified:   SubmissionInfo/ManualTestResults.xml 	modified:   SubmissionInfo/Settings.xml 	deleted:    SubmissionInfo/Thumbs.db 	modified:   Thumbs.db 	modified:   Toolkit.Content/Thumbs.db 	modified:   obj/Debug/AboutPage.g.vb 	modified:   obj/Debug/App.g.vb 	modified:   obj/Debug/DesignTimeResolveAssemblyReferences.cache 	modified:   obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache 	modified:   obj/Debug/French Conjugator.dll 	modified:   obj/Debug/French Conjugator.pdb 	modified:   obj/Debug/French Conjugator.vbproj.FileListAbsolute.txt 	modified:   obj/Debug/French Conjugator.vbprojResolveAssemblyReference.cache 	modified:   obj/Debug/French Conjugator.xml 	modified:   obj/Debug/MDIL/French Conjugator.dll 	modified:   obj/Debug/MDIL/MDILXapCompileLog.txt 	modified:   obj/Debug/MDILCacheFile.xml 	modified:   obj/Debug/MainPage.g.vb 	modified:   obj/Debug/PageThanks.g.vb 	modified:   obj/Debug/ReportPage.g.vb 	modified:   obj/Debug/SuggestPage.g.vb 	modified:   obj/Debug/XapCacheFile.xml

--- a/MTN French Conjugator inDev/French Conjugator.vbproj
+++ b/MTN French Conjugator inDev/French Conjugator.vbproj
@@ -218,12 +218,14 @@
     <Content Include="Images\appbar.overflowdots.png" />
     <Content Include="Images\appbar.questionmark.rest.png" />
     <Content Include="Images\appbar.refresh.rest.png" />
+    <Content Include="SplashScreenImage.jpg" />
     <Resource Include="Toolkit.Content\ApplicationBar.Cancel.png" />
     <Resource Include="Toolkit.Content\ApplicationBar.Check.png" />
     <Resource Include="Images\MTNSoftwareLogo.png" />
     <Resource Include="MTNSoftwareLogo.png" />
     <Content Include="Images\background.png" />
-    <Content Include="SplashScreenImage.jpg" />
+    <Content Include="MarketplaceIcon.png" />
+    <Content Include="LegacySplashScreenImage.jpg" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
