new file:   Backup/Images/Thumbs.db 	new file:   Backup/Thumbs.db 	modified:   Bin/Release/French Conjugator.dll 	modified:   Bin/Release/French Conjugator.pdb 	modified:   Bin/Release/French Conjugator_Release_AnyCPU.xap 	modified:   Bin/Release/MDIL/French Conjugator.dll 	modified:   French Conjugator.vbproj 	new file:   French_Conjugator_2014_02_15_20_15_24.sap 	modified:   MainPage.xaml.vb 	new file:   PerfLogs/Cache8.0.105211359419486/French Conjugator3278994458/Coding4Fun.Toolkit.Controls.ni.DLL 	new file:   PerfLogs/Cache8.0.105211359419486/French Conjugator3278994458/Coding4Fun.Toolkit.Controls.ni.pdb 	new file:   PerfLogs/Cache8.0.105211359419486/French Conjugator3278994458/French Conjugator.ni.DLL 	new file:   PerfLogs/Cache8.0.105211359419486/French Conjugator3278994458/French Conjugator.ni.pdb 	new file:   PerfLogs/Cache8.0.105211359419486/French Conjugator3278994458/Microsoft.Phone.Controls.Toolkit.ni.pdb 	new file:   PerfLogs/Cache8.0.105211359419486/French Conjugator3278994458/microsoft.phone.controls.toolkit.ni.DLL 	new file:   PerfLogs/Cache8.0.105211359419486/Microsoft.Phone.Interop.ni.dll 	new file:   PerfLogs/Cache8.0.105211359419486/Microsoft.Phone.ni.dll 	new file:   PerfLogs/Cache8.0.105211359419486/System.Core.ni.dll 	new file:   PerfLogs/Cache8.0.105211359419486/System.Net.ni.dll 	new file:   PerfLogs/Cache8.0.105211359419486/System.Windows.RuntimeHost.ni.dll 	new file:   PerfLogs/Cache8.0.105211359419486/System.Windows.ni.dll 	new file:   PerfLogs/Cache8.0.105211359419486/System.Xml.ni.dll 	new file:   PerfLogs/Cache8.0.105211359419486/System.ni.dll 	new file:   PerfLogs/Cache8.0.105211359419486/mscorlib.debug.resources.dll 	new file:   PerfLogs/Cache8.0.105211359419486/mscorlib.ni.dll 	new file:   PerfLogs/French Conjugator3278994458/tmp7406.spl 	new file:   PerfLogs/French Conjugator3278994458/tmp7407.srum 	new file:   SubmissionInfo/ApplicationIcon300.png 	deleted:    SubmissionInfo/ApplicationIconSmall.png 	modified:   SubmissionInfo/Ma

--- a/MTN French Conjugator inDev/French Conjugator.vbproj
+++ b/MTN French Conjugator inDev/French Conjugator.vbproj
@@ -204,6 +204,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="FrenchAppBackground.psd" />
+    <None Include="French_Conjugator_2014_02_15_20_15_24.sap" />
     <None Include="My Project\AppManifest.xml" />
     <None Include="My Project\WMAppManifest.xml">
       <SubType>Designer</SubType>
