modified:   AboutPage.xaml.vb 	modified:   Bin/Release/French Conjugator.dll 	modified:   Bin/Release/French Conjugator.pdb 	modified:   Bin/Release/French Conjugator.xml 	modified:   Bin/Release/French Conjugator_Release_AnyCPU.xap 	modified:   Bin/Release/French_Conjugator.xap 	modified:   Bin/Release/MDIL/French Conjugator.dll 	modified:   Bin/Release/MDIL/WMAppManifest.xml 	modified:   Bin/Release/My Project/WMAppManifest.xml 	modified:   French Conjugator.vbproj 	modified:   My Project/AssemblyInfo.vb 	modified:   My Project/WMAppManifest.xml 	modified:   obj/Release/DesignTimeResolveAssemblyReferences.cache 	modified:   obj/Release/French Conjugator.dll 	modified:   obj/Release/French Conjugator.pdb 	modified:   obj/Release/French Conjugator.xml 	modified:   obj/Release/MDIL/French Conjugator.dll 	modified:   obj/Release/MDILCacheFile.xml 	modified:   obj/Release/XapCacheFile.xml

--- a/MTN French Conjugator inDev/French Conjugator.vbproj
+++ b/MTN French Conjugator inDev/French Conjugator.vbproj
@@ -60,7 +60,9 @@
     <NoStdLib>true</NoStdLib>
     <NoConfig>true</NoConfig>
     <DocumentationFile>French Conjugator.xml</DocumentationFile>
-    <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
+    <NoWarn>
+    </NoWarn>
+    <WarningsAsErrors>41999,42016,42017,42018,42019,42020,42021,42022,42032,42036</WarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -71,7 +73,9 @@
     <NoStdLib>true</NoStdLib>
     <NoConfig>true</NoConfig>
     <DocumentationFile>French Conjugator.xml</DocumentationFile>
-    <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
+    <NoWarn>
+    </NoWarn>
+    <WarningsAsErrors>41999,42016,42017,42018,42019,42020,42021,42022,42032,42036</WarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup>
     <OptionExplicit>On</OptionExplicit>
@@ -80,7 +84,7 @@
     <OptionCompare>Binary</OptionCompare>
   </PropertyGroup>
   <PropertyGroup>
-    <OptionStrict>Off</OptionStrict>
+    <OptionStrict>On</OptionStrict>
   </PropertyGroup>
   <PropertyGroup>
     <OptionInfer>On</OptionInfer>
@@ -91,12 +95,14 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
+    <WarningsAsErrors>41999,42016,42017,42018,42019,42020,42021,42022,42032,42036</WarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
     <PlatformTarget />
     <OutputPath>Bin\x86\Release</OutputPath>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
+    <WarningsAsErrors>41999,42016,42017,42018,42019,42020,42021,42022,42032,42036</WarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|ARM'">
     <PlatformTarget />
@@ -104,12 +110,14 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
+    <WarningsAsErrors>41999,42016,42017,42018,42019,42020,42021,42022,42032,42036</WarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|ARM'">
     <PlatformTarget />
     <OutputPath>Bin\ARM\Release</OutputPath>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
+    <WarningsAsErrors>41999,42016,42017,42018,42019,42020,42021,42022,42032,42036</WarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Coding4Fun.Toolkit.Controls">
